// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returns raw schema column information > rawColumns 1`] = `
[
  {
    "dataType": "integer",
    "defaultValue": undefined,
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": true,
    "maxLen": undefined,
    "minLen": undefined,
    "name": "id",
    "schemaName": "main",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "text",
    "defaultValue": undefined,
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": false,
    "isSerial": false,
    "maxLen": undefined,
    "minLen": undefined,
    "name": "name",
    "schemaName": "main",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "text",
    "defaultValue": undefined,
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "minLen": undefined,
    "name": "email",
    "schemaName": "main",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "text",
    "defaultValue": "'active'",
    "description": undefined,
    "enumValues": [
      "active",
      "inactive",
      "banned",
    ],
    "isArray": false,
    "isEnum": true,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "minLen": undefined,
    "name": "status",
    "schemaName": "main",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "json",
    "defaultValue": undefined,
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "minLen": undefined,
    "name": "profile",
    "schemaName": "main",
    "tableName": "users",
    "tableType": "table",
  },
  {
    "dataType": "text",
    "defaultValue": "datetime('now')",
    "description": undefined,
    "enumValues": undefined,
    "isArray": false,
    "isEnum": false,
    "isNullable": true,
    "isSerial": false,
    "maxLen": undefined,
    "minLen": undefined,
    "name": "created_at",
    "schemaName": "main",
    "tableName": "users",
    "tableType": "table",
  },
]
`;

exports[`returns schema models > userTable 1`] = `
{
  "columns": [
    {
      "dataType": "integer",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": true,
      "isWritable": false,
      "isWriteOptional": true,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "id",
      "schemaName": "main",
      "tableName": "users",
      "tableType": "table",
      "type": "int",
    },
    {
      "dataType": "text",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": false,
      "isReadOptional": false,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": false,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "name",
      "schemaName": "main",
      "tableName": "users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "text",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "email",
      "schemaName": "main",
      "tableName": "users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "text",
      "defaultValue": "'active'",
      "description": undefined,
      "enumValues": [
        "active",
        "inactive",
        "banned",
      ],
      "isArray": false,
      "isEnum": true,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "status",
      "schemaName": "main",
      "tableName": "users",
      "tableType": "table",
      "type": "string",
    },
    {
      "dataType": "json",
      "defaultValue": undefined,
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "profile",
      "schemaName": "main",
      "tableName": "users",
      "tableType": "table",
      "type": "json",
    },
    {
      "dataType": "text",
      "defaultValue": "datetime('now')",
      "description": undefined,
      "enumValues": undefined,
      "isArray": false,
      "isEnum": false,
      "isNullable": true,
      "isReadOptional": true,
      "isSerial": false,
      "isWritable": true,
      "isWriteOptional": true,
      "maxLen": undefined,
      "minLen": undefined,
      "name": "created_at",
      "schemaName": "main",
      "tableName": "users",
      "tableType": "table",
      "type": "string",
    },
  ],
  "name": "users",
  "schemaName": "main",
  "type": "table",
}
`;
